--- a/.github/workflows/spell-checking.yaml
+++ b/.github/workflows/spell-checking.yaml
@@ -2,6 +2,14 @@ name: 'Check spelling'
 on: # rebuild any PRs and main branch changes
   pull_request:
   push:
+  workflow_dispatch:
+    inputs:
+      incremental_files_only:
+        description: 'Check only incremental files'
+        default: 'true'
+        type: choice
+        options: ['true', 'false']
+        
 
 jobs:
   spellcheck: # run the action
@@ -9,3 +17,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: streetsidesoftware/cspell-action@v6
+        with:
+          incremental_files_only: ${{ github.event.inputs.incremental_files_only }}
