feat(spell-check): Extend spell checking workflow to include JSON files and LICENSE

--- a/.github/workflows/spell-checking.yaml
+++ b/.github/workflows/spell-checking.yaml
@@ -20,4 +20,5 @@ jobs:
         with:
           incremental_files_only: ${{ github.event.inputs.incremental_files_only }}
           files: |
-            **/*.{md,txt}
+            **/*.{md,txt,json}
+            LICENSE
