fix(spell-check): Correct configuration path in spell checking workflow

--- a/.github/workflows/spell-checking.yaml
+++ b/.github/workflows/spell-checking.yaml
@@ -19,7 +19,7 @@ jobs:
       - uses: streetsidesoftware/cspell-action@v6
         with:
           incremental_files_only: ${{ github.event.inputs.incremental_files_only }}
-          config: .
+          config: "./"
           files: |
             **/*.{md,txt,json}
             LICENSE
