feat(spell-check): Set up Brazilian Portuguese dictionary and update spell checking workflow

--- a/.github/workflows/spell-checking.yaml
+++ b/.github/workflows/spell-checking.yaml
@@ -23,7 +23,8 @@ jobs:
           node-version: 18
       
       - run: |
-          npm install -g @cspell/dict-pt-br
+          cd .cspell 
+          npm install
 
       - uses: streetsidesoftware/cspell-action@v6
         with:
